test/MC/SVE/regression-tests/negative_tests/sve-ld2h-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU16E2Load2LSSZ
// Offset register Rm cannot be xzr
ld2h {z2.h, z3.h}, p2/z, [x25, xzr, lsl #1]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
